# large-sklearn-model

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: data.py  dataset.py  main.py  model.py  next_word_completion_dataset.csv  train.py
