[tool.poetry]
name = "large-sklearn-model"
version = "0.1.0"
description = ""
authors = ["Josko de Boer <Josko.deboer@xomnia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
